--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,23 +17,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
-  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
 
+  background: #1a120b;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -51,7 +51,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #5c3f76;
 }
 button:focus,
 button:focus-visible {
