--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,17 +41,19 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #936eb4;
   cursor: pointer;
   transition: border-color 0.25s;
+  transition: all 0.12s ease;
+  transform: scale(1);
 }
 button:hover {
   border-color: #5c3f76;
+  transform: scale(1.1) perspective(01px);
 }
 button:focus,
 button:focus-visible {
