--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,6 +50,7 @@ button {
   transition: border-color 0.25s;
   transition: all 0.12s ease;
   transform: scale(1);
+  filter: drop-shadow(0 0px 5px #5c3f76);
 }
 button:hover {
   border-color: #5c3f76;
